examples/bench/bad/typing/exn6.mlw

(* E undeclared in f effects *)

exception E

external parameter f : unit -> { } unit { true | E => false }

